test/param/errors/checkParamTypes.compopts
-st=bool(8)
-st=bool(16)
-st=bool(32)
-st=bool(64)
-st=bool
-st=int(8)
-st=int(16)
-st=int(32)
-st=int(64)
-st=int
-st=uint(8)
-st=uint(16)
-st=uint(32)
-st=uint(64)
-st=uint
-st=color
-st=real(32)
-st=real(64)
-st=real
-st=imag(32)
-st=imag(64)
-st=imag
-st=complex(64)
-st=complex(128)
-st=complex
-st=R             # checkParamTypes-error.good
-st='borrowed C'  # checkParamTypes-error.good
-st=U             # checkParamTypes-error.good
-st=range         # checkParamTypes-error.good
-st=domain(1)     # checkParamTypes-error.good
-st='[1..3] real' # checkParamTypes-error.good
-st='sync int'    # checkParamTypes-error.good
-st='atomic int'  # checkParamTypes-error.good
